[package]
name        = "zcred"
description = "Modern authoriZation-centric credential format, ala SPKI/SDSI, Macaroons, and Vanadium"
version     = "0.0.0"
license     = "MIT"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://www.zcred.org"
repository  = "https://github.com/zcred/zcred"
readme      = "README.md"
categories  = ["authentication","cryptography"]
keywords    = ["authentication", "cryptography", "security", "serialization", "merkle"]

[dependencies]
